deploy/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: mariadb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - mariadb
            topologyKey: "kubernetes.io/hostname"      
      containers:
      - name: mariadb
        image: mariadb:latest
        volumeMounts:
          - name: mariadb-config-volume
            mountPath: /etc/mysql/mariadb.conf.d/50-server.cnf
            subPath: 50-server.cnf
        ports:
        - containerPort: 3306
      volumes:
        - name: mariadb-config-volume
          configMap:
            name: migration-config
            items:
              - key: 50-server.cnf
                path: 50-server.cnf
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
  clusterIP: None  # Headless service to allow direct communication between pods
